2011-10-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/res_comp.c: Eliminate unused var "ppch".

2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Check for size of time_t.

2011-09-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/include/rtems/score/tod.h: Declare _TOD_Set_with_timestamp()
	and _TOD_Get_as_timestamp().
	* score/src/coretodset.c: Define _TOD_Set_with_timestamp().
	* score/src/coretodget.c: Define _TOD_Get_as_timestamp().
	* rtems/src/clockset.c: Use _TOD_Set_with_timestamp().
	* score/include/rtems/score/timestamp64.h, score/src/ts64set.c:
	Changed parameter types of _Timestamp64_Set().
	* rtems/src/clocktodtoseconds.c: Year 2100 is not a leap year.

2011-09-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/clock.h, rtems/src/clockset.c: Added const
	qualifier in rtems_clock_set().

2011-09-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1914/cpukit
	* score/src/timespecgreaterthan.c, score/src/ts64greaterthan.c:
	Removed files.
	* score/Makefile.am: Reflect changes above.
	* score/include/rtems/score/timespec.h,
	score/include/rtems/score/timestamp.h,
	score/include/rtems/score/timestamp64.h, score/src/ts64addto.c,
	score/src/ts64divide.c, score/src/ts64dividebyinteger.c,
	score/src/ts64equalto.c, score/src/ts64getnanoseconds.c,
	score/src/ts64getseconds.c, score/src/ts64lessthan.c,
	score/src/ts64set.c, score/src/ts64settozero.c,
	score/src/ts64subtract.c, score/src/ts64toticks.c,
	score/src/ts64totimespec.c: Use CPU_TIMESTAMP_USE_STRUCT_TIMESPEC,
	CPU_TIMESTAMP_USE_INT64, and CPU_TIMESTAMP_USE_INT64_INLINE.  Removed
	copy and paste.

2011-09-26	Petr Benes <benesp16@fel.cvut.cz>

	PR 1923/testing
	* score/src/schedulercbsgetexecutiontime.c: Improve coverage.

2011-09-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1921/cpukit
	* score/inline/rtems/score/thread.inl,
	score/src/threadstartmultitasking.c: Allow CPU port to provide