@@ -1,5 +1,9 @@
 2011-10-02	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* libmisc/shell/main_time.c: Introduce PRIdtime_t.
+
+2011-10-02	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* libnetworking/libc/res_comp.c: Eliminate unused var "ppch".
 
 2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
